--- a/scss/layout/_main-window.scss
+++ b/scss/layout/_main-window.scss
@@ -21,8 +21,8 @@
     background-position: center;
     margin-right: auto;
     margin-left: auto;
-    @media screen and (min-width: 480px)
-    {width: 1600px;display: block};
+    @media screen and (min-width: 0px) and (max-width:767px)
+    {max-width: 448px;display: block};
 
 &__title{font-style: normal;
     font-weight: 900;
