--- a/scss/layout/_subscribe.scss
+++ b/scss/layout/_subscribe.scss
@@ -7,7 +7,7 @@
     text-transform: uppercase;
     color: #FFFFFF;
     @media screen and (min-width: 0) and (max-width:767px)
-    {width: 100%;;
+    {max-width: 100%;;
       text-align: center;
       margin-left: auto;
       margin-right: auto;}
@@ -15,17 +15,18 @@
 
   .subscribe__form{margin-left: 90px;
     @media screen and (min-width: 0) and (max-width:767px)
-    {width: 448px;;
+    {max-width: 100%;
       text-align: center;
       margin-left: auto;
       margin-right: auto;} }
 
     .subscribe__input{margin-top: 20px; background-color: transparent; border: 1px solid rgba(255, 255, 255, 0.3);
       @media screen and (min-width: 0) and (max-width:767px)
-  {   display: block;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;}
+  {   max-width: 100%; display: block;
+    }
   
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-      border-radius: 4px; min-width: 356px; min-height: 50px; padding-left: 16px; color: white;} 
+      border-radius: 4px;  min-height: 50px; padding-left: 16px; color: white;
+      @media screen and (min-width: 1200px) 
+  {   max-width: 100%;min-width: 356px; 
+    } }
