--- a/css/main.scss.css
+++ b/css/main.scss.css
@@ -952,7 +952,7 @@ header.no-transparency {
 }
 @media screen and (min-width: 0px) and (max-width: 767px) {
   .main-window {
-    max-width: 448px;
+    max-width: 100%;
     display: block;
   }
 }
@@ -1389,7 +1389,7 @@ header.no-transparency {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #AFB1B8;
   color: #AFB1B8;
@@ -1414,7 +1414,7 @@ header.no-transparency {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    max-width: 100%;
+    max-width: 210px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
