--- a/scss/layout/_clients-section.scss
+++ b/scss/layout/_clients-section.scss
@@ -26,7 +26,7 @@
   
   .clients-section__logo-link {
     display: flex;
-    width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid #AFB1B8;
     color: #AFB1B8;
@@ -37,7 +37,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (min-width: 0) and (max-width:767px)
-    {display: flex; justify-content: center; max-width: 100%;}
+    {display: flex; justify-content: center; max-width: 210px;}
     
     /**tablet*/
     @media screen and (min-width: 768px) and (max-width:1199px)
