--- a/scss/layout/_main-window.scss
+++ b/scss/layout/_main-window.scss
@@ -22,7 +22,7 @@
     margin-right: auto;
     margin-left: auto;
     @media screen and (min-width: 0px) and (max-width:767px)
-    {max-width: 448px;display: block};
+    {max-width: 100%;display: block};
 
 &__title{font-style: normal;
     font-weight: 900;
