--- a/scss/layout/_clients-section.scss
+++ b/scss/layout/_clients-section.scss
@@ -26,7 +26,7 @@
   
   .clients-section__logo-link {
     display: flex;
-    width: 100%;
+    width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
     color: #AFB1B8;
