--- a/scss/layout/_subscribe.scss
+++ b/scss/layout/_subscribe.scss
@@ -10,7 +10,12 @@
     {max-width: 100%;;
       text-align: center;
       margin-left: auto;
-      margin-right: auto;}
+      margin-right: auto;  
+      @media screen and (min-width: 768px) and (max-width:1199px)
+      {max-width: 100%;;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;}}
     }
 
   .subscribe__form{margin-left: 90px;
@@ -18,15 +23,23 @@
     {max-width: 100%;
       text-align: center;
       margin-left: auto;
-      margin-right: auto;} }
+      margin-right: auto;} 
+      @media screen and (min-width: 768px) and (max-width:1199px)
+      {  margin-left: 0; text-align: center; }}
 
     .subscribe__input{margin-top: 20px; background-color: transparent; border: 1px solid rgba(255, 255, 255, 0.3);
       @media screen and (min-width: 0) and (max-width:767px)
-  {   max-width: 100%; display: block;
+  {   max-width: 100%; display: block; margin-right:0;
     }
   
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
       border-radius: 4px;  min-height: 50px; padding-left: 16px; color: white;
+      @media screen and (min-width: 768px) 
+  {   max-width: 100%; min-width: 450px; 
+    }
       @media screen and (min-width: 1200px) 
   {   max-width: 100%;min-width: 356px; 
-    } }
+    } 
+    @media screen and (min-width: 0) 
+    {   max-width: 100%; margin-right: 0;
+      }}
