--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -107,7 +107,8 @@
     height: 4px;
     border-radius: 4px;
     background-color: var(--active-button-color);
-    @media screen and (max-width: 481px)
-    {width: 480px;display: none;  }
+    @media screen and (max-width: 767px)
+    {max-width: 480px;display: none;  
+     
   }
-  
+}
