--- a/scss/components/_galery.scss
+++ b/scss/components/_galery.scss
@@ -8,8 +8,10 @@
     justify-content: center;
     margin: 0;
     padding-left: 0;
-    @media screen and (min-width: 480px)
-    {max-width: 448px; flex-wrap: wrap; justify-content: left;} 
+    @media screen and (min-width: 0) and (max-width:767px)
+    {max-width: 448px; flex-wrap: wrap; justify-content: left;
+      @media screen and (min-width: 768px) and (max-width:1199px)
+      {max-width: 720px; }} 
   }
 }
 
@@ -21,13 +23,16 @@
     padding-left: 0;
     margin-top: 50px;
     margin-bottom: 0;
-    @media screen and (min-width: 480px)
-    {max-width: 448px;}
+    @media screen and (min-width: 0) and (max-width:767px)
+    {max-width: 448px;} 
+    @media screen and (min-width: 768px) and (max-width:1199px)
+    { display: grid; grid-template-columns: 1fr 1fr; justify-content: center;}
   }
 
   &__portfolio-item {
     position: relative;
     overflow: hidden;
+    
   }
 }
 
@@ -55,6 +60,8 @@
     border-bottom: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
     border-left: 1px solid #eeeeee;
+    
+      
   }
 
   .project-section__position-name {
