--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -31,7 +31,9 @@
    
 
     &__icon{fill: currentColor;
-        margin-right: 3px;}
+        margin-right: 3px;
+        @media screen and (min-width: 0) and (max-width:1199px)
+        { width:14px ; height:10px ;}}
     
     }
   
@@ -54,6 +56,8 @@
     {display: none;}
     
     
+    @media screen and (min-width: 0) and (max-width:1199px)
+    { font-size: 12px; line-height: 14/12;}
     @media screen and (min-width: 768px) and (max-width:1199px)
     { max-width: 720px; padding:0;  display: inline-block; }
 
