--- a/scss/layout/_clients-section.scss
+++ b/scss/layout/_clients-section.scss
@@ -2,7 +2,7 @@
     padding-top: 94px;
     padding-bottom: 94px;
     @media screen and (min-width: 0) and (max-width:767px)
-    {flex-direction: column; padding-top: 60px; }  
+    {flex-direction: column; padding-top: 60px; padding-bottom: 60px; }  
     @media screen and (min-width: 768px) and (max-width:1199px)
     { justify-content: center; padding-top: 60px; padding-bottom: 60px;}
   
