--- a/scss/layout/_team-section.scss
+++ b/scss/layout/_team-section.scss
@@ -4,7 +4,7 @@
     padding-bottom: 94px;
     background-color: #f5f4fa;
     @media screen and (min-width: 0) and (max-width:767px)
-    {flex-direction: column;  }  
+    {flex-direction: column;padding-top: 60px; padding-bottom: 60px;  }  
     @media screen and (min-width: 768px) and (max-width:1199px)
     { justify-content: center; padding-top: 60px; padding-bottom: 60px;}
    
@@ -17,7 +17,7 @@
   }
   .team-section__list{ /**Mobile*/
     @media screen and (min-width: 0) and (max-width:767px)
-    {display: block;}
+    {display: block; }
     
     /**tablet*/
     @media screen and (min-width: 768px) and (max-width:1199px)
@@ -36,9 +36,10 @@
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-  
-  }
-  
+    @media screen and (min-width: 0) and (max-width:767px)
+    {margin-bottom: 30px; 
+  }}
+  .team-section--last{margin:0}
   
   .team-section__workername {
     font-weight: 500;
@@ -91,7 +92,6 @@
     &:focus{ background-color: var(--active-button-color);
         fill: white;}
   }
-  
   
   
   
